test:fix sonar and  add comprehensive tests for TruSoApiController to maximize coverage